docs/auditor/10.6/admin/monitoringplans/dataaccounts.md
---
title: "Data Collecting Account"
description: "Data Collecting Account"
sidebar_position: 30
---

# Data Collecting Account

This is a service account that Auditor uses to collect audit data from the monitored items (domains,
OUs, servers, etc.). Netwrix recommends creating a dedicated service account for that purpose.
Depending on the data source your monitoring plan will process, the account must meet the
corresponding requirements (see the table below).

If you are going to enable integration with Netwrix Data Classification (NDC Provider), additional
server roles must be assigned to the account. See
[Sensitive Data Discovery ](/docs/auditor/10.6/admin/settings/sensitivedatadiscovery.md)
topic for additional information.

Starting with version 9.96, you can use group Managed Service Account (gMSA) as data collecting
account. Currently, the following data sources are supported: Active Directory (also for Group
Policy and Logon Activity), Windows Server, File Server (currently for Windows File Servers), SQL
Server, SharePoint.

For more details about gMSA usage, see the
[Use Group Managed Service Account (gMSA)](/docs/auditor/10.6/requirements/gmsa.md)topic
for additional information.

The gMSA should also meet the related requirements (see the table below).

| Data source                                                                          | Required rights and permissions:                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Active Directory                                                                     | [Permissions for Active Directory Auditing](/docs/auditor/10.6/configuration/activedirectory/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| Active Directory Federation Services                                                 | [Permissions for AD FS Auditing](/docs/auditor/10.6/configuration/activedirectoryfederatedservices/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                           |
| Microsoft Entra ID (formerly Azure AD), Exchange Online, SharePoint Online, MS Teams | [Permissions for Microsoft Entra ID Auditing](/docs/auditor/10.6/configuration/microsoft365/microsoftentraid/permissions/permissions.md) [Permissions for Exchange Online Auditing](/docs/auditor/10.6/configuration/microsoft365/exchangeonline/permissions.md) [Permissions for SharePoint Online Auditing ](/docs/auditor/10.6/configuration/microsoft365/sharepointonline/permissions/permissions.md) [Permissions for Teams Auditing](/docs/auditor/10.6/configuration/microsoft365/teams/permissions/permissions.md) |
| Exchange                                                                             | [Permissions for Exchange Auditing](/docs/auditor/10.6/configuration/exchange/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| Windows File Servers                                                                 | [Permissions for Windows File Server Auditing](/docs/auditor/10.6/configuration/fileservers/windows/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                          |
| Dell Isilon                                                                          | [Permissions for Dell Isilon/PowerScale Auditing](/docs/auditor/10.6/configuration/fileservers/dellisilon/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Dell VNX/VNXe/Unity                                                                  | [Permissions for Dell Data Storage Auditing](/docs/auditor/10.6/configuration/fileservers/delldatastorage/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                    |
| NetApp                                                                               | [Permissions for NetApp Auditing](/docs/auditor/10.6/configuration/fileservers/netappcmode/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| Nutanix Files                                                                        | [Permissions for Nutanix Files Auditing](/docs/auditor/10.6/configuration/fileservers/nutanix/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                |
| Qumulo                                                                               | [Permissions for Qumulo Auditing](/docs/auditor/10.6/configuration/fileservers/qumulo/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| Synology                                                                             | [Permissions for Synology Auditing](/docs/auditor/10.6/configuration/fileservers/synology/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Network Devices                                                                      | [Permissions for Network Devices Auditing](/docs/auditor/10.6/configuration/networkdevices/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| Oracle Database                                                                      | [Permissions for Oracle Database Auditing](/docs/auditor/10.6/configuration/oracle/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| SharePoint                                                                           | [Permissions for SharePoint Auditing](/docs/auditor/10.6/configuration/sharepoint/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| SQL Server                                                                           | [Permissions for SQL Server Auditing ](/docs/auditor/10.6/configuration/sqlserver/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| VMware                                                                               | [Permissions for VMware Server Auditing ](/docs/auditor/10.6/configuration/vmware/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| Windows Server (including DNS and DHCP)                                              | [Permissions for Windows Server Auditing ](/docs/auditor/10.6/configuration/windowsserver/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Event Log (including IIS)—collected with Event Log Manager                           | [Permissions for Windows Server Auditing ](/docs/auditor/10.6/configuration/windowsserver/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Group Policy                                                                         | [Permissions for Group Policy Auditing ](/docs/auditor/10.6/configuration/grouppolicy/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| Logon Activity                                                                       | [Permissions for Logon Activity Auditing ](/docs/auditor/10.6/configuration/logonactivity/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| Inactive Users in Active Directory—collected with Inactive User Tracker              | In the target domain - A member of the Domain Admins group                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| Password Expiration in Active Directory—collected with Password Expiration Notifier  | In the target domain - A member of the Domain Users group                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| User Activity                                                                        | On the target server - A member of the local Administrators group                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| Sensitive Data Discovery                                                             | [Sensitive Data Discovery ](/docs/auditor/10.6/admin/settings/sensitivedatadiscovery.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                     |

## Update Credentials for Account

Once a Data Collecting Account has been configured, you can always update the password for this
account in Netwrix Auditor.

Follow the steps to update credentials for the accounts used by Auditor:

**Step 1 –** On the Auditor home page, navigate to **Settings**.

**Step 2 –** Locate the General tab.

**Step 3 –** Click the **Manage** button under **Accounts and Passwords**.

**Step 4 –** Select an account you want to update the password for.

**Step 5 –** Review the account configuration scope and click **Update password** next to this
account.

![updatecredentials](/img/product_docs/auditor/10.6/admin/monitoringplans/updatecredentials.webp)

**Step 6 –** Save your edits.

See the [General](/docs/auditor/10.6/admin/settings/general.md) topic for
additional information.
